[package]
name = "mi2graph"
authors = ["Chenhua Wu <chanhuawu@outlook.com>"]
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Generate MIC relations between features with dynamic feature filtering for graph initialization"
readme = "README.md"
repository = "https://github.com/WuChenh/mi2graph"
homepage = "https://github.com/WuChenh/mi2graph"
keywords = ["bioinformatics", "machine-learning"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4"
clap = "4.5.31"
indicatif = { version = "0.18", features = ["rayon"] }
ndarray = "0.17"
ndarray-npy = "0.10.0"
ndarray-rand = "0.16.0"
polars = { version = "0.53.0", features = [
    "lazy",
    "ndarray",
    "strings",
    "parquet",
    "decompress",
] }
rayon = "1.11.0"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
debug = true
lto = "fat"
opt-level = 3
